--- a/02-mongo-signup/package.json
+++ b/02-mongo-signup/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
