--- a/03-hashing-remember/package.json
+++ b/03-hashing-remember/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
-    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
