--- a/04-jwt-react/package.json
+++ b/04-jwt-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-react",
+  "name": "04-jwt-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
-    "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.5",
     "passport": "^0.4.0",
